--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <html>
 <head><meta charset="UTF-8"></head>
-<body>
+<body background="Hateruma_okinawa-Ocean_scenery_HD_wallpaper_.jpg">
 <center>
 <div id="head">
 <table width="1000"border="0"cellpadding="0"cellspacing="0">
@@ -8,14 +8,14 @@
       <td><img src="asd.png"width="1000"height="100"></td>
  </tr>
  <tr>
-   <td align="center"><h1>國立聯合大學電子學系</h1></td>
+   <td align="center"><h1><font color="D8F38E">國立聯合大學電子學系</font></h1></td>
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               	</tr>                                                                                                                                                                        	
 </table>
 </div>
 <div id="nav1"><br>
 <table width="1000"border="0"cellpadding="0"cellspacing="1"bgcolor="#999999">
 <tr>
-  	<td bgcolor="#FFFFFF"><a href="index.htm">旅遊集<a>　>
+  	<td bgcolor="#a6fde4"><a href="index.htm">旅遊集<a>　>
 <a href="index.htm">旅遊祕笈</a>
 　>澎湖旅遊
 </td>  	
@@ -25,23 +25,23 @@
 <div id="cont"><br/>
 <table border="1" width="1000" cellpadding="0"cellspacing="1" bgcolor="#999999">
 <tr>
-<td align="center" bgcolor="#FFFFFF" colspan="2" valign="center" ><font size="36"><b>旅遊行程規畫作品</b></font></td>
+<td align="center" bgcolor="#A2E39C" colspan="2" valign="center" ><font size="36"><b>旅遊行程規畫作品</b></font></td>
 </tr>
 <tr>
-<td width="191"bgcolor="#FFFFFF" valign="top">
+<td width="191"bgcolor="#f6df94" valign="top">
 <table width="181" cellpadding="0"cellspacing="1">
-<tr>選單列
-<td width="171"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTHJsCQLAqD2yeG8H47i2tkSKlXhdZpHRHH6w&usqp=CAU" width="60" height="60">澎湖花火節</td>
+<tr><font size="5"><font color="ee2e41">選單列</font>
+<td width="171"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTHJsCQLAqD2yeG8H47i2tkSKlXhdZpHRHH6w&usqp=CAU" width="60" height="60"><font color="c379e0">澎湖花火節</td>
 <tr>
 <tr>
-<td width="171"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS3cEuC7849zNmgiwT7UsiOC98KEaSqw-RAHg&usqp=CAU" width="60" height="60">澎湖交通</td>
+<td width="171"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS3cEuC7849zNmgiwT7UsiOC98KEaSqw-RAHg&usqp=CAU" width="60" height="60"><font color="c379e0">澎湖交通</td>
 <tr>
 <tr>
-<td width="171"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT-wHU4Ji7iinbocq7Iss1Mi3lO8VbKu7uW7w&usqp=CAU" width="60" height="60">澎湖景點</td>
+<td width="171"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT-wHU4Ji7iinbocq7Iss1Mi3lO8VbKu7uW7w&usqp=CAU" width="60" height="60"><font color="c379e0">澎湖景點</td>
 <tr>
 </table>
 </td>
-<td width="806" bgcolor="#FFFFFF" valign="top" >
+<td width="806" bgcolor="#c2defa" valign="top" >
 <table width="800" cellpadding="0"cellspacing="1" >
 <tr>
 <td ><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSmpvUifdOP0WdskUxtzvNvKWq58JUf3uC9-g&usqp=CAU" width="145" height="200"></td>
@@ -95,7 +95,7 @@
 <div id="bottom">
   <table width="1000" border="0" cellpadding="0" cellspacing="1" bgcolor="#999999">
 	<tr>
-  	<td align="center" bgcolor="#FFFFFF"><br />
+  	<td align="center" bgcolor="#cdf6ea"><br />
     	<a href="index.html">&copy版權所有。國立聯合大學電子系。禁止轉貼<br />
       	<br />
     	</a></td>
